--- a/ch04/ch4_proj/templates/about.html
+++ b/ch04/ch4_proj/templates/about.html
@@ -11,6 +11,7 @@
         <p>
             Hi, I am Cheng Hsun Li.
         </p>
-        <em>Today's Words: {{ quote }}</em>
+        </hr>
+        <a href='/'>Home</a>
     </body>
 </html>
