--- a/ch04/ch4_proj/templates/index.html
+++ b/ch04/ch4_proj/templates/index.html
@@ -6,7 +6,7 @@
         <title>Welcome to My Website</title>
     </head>
     <body>
-        <h2>Cheng Hsun Li</h2>
+        <h2>Welcome to My Website</h2>
         <hr>
         <ul>
             <li><a href='/list'>product list</a></li>
