--- a/ch04/ch4_proj/templates/list.html
+++ b/ch04/ch4_proj/templates/list.html
@@ -2,21 +2,21 @@
 <html>
     <head>
         <meta charset='utf-8'>
-        <title>{{ p.name }}</title>
+        <title>Product List</title>
     </head>
     <body>
-        <h2>{{ p.name }}</h2>
+        <h2>List</h2>
         <hr>
         <table width=400 border=1 bgcolor='#ccffcc'>
             <tr><td>Name</td><td>Price</td><td>Size</td></tr>
             {% for p in products %}
                     <tr>
-                        <td>{{ p.name }}</td>
+                        <td><a href='/list/{{ p.sku }}'>{{ p.name }}</a></td>
                         <td>{{ p.price }}</td>
                         <td>{{ p.size }}</td>
                     </tr>
             {% endfor %}
         </table>
-        <a href='/list'>Return to List</a>
+        <a href='/'>Home</a>
     </body>
 </html>
