--- a/ch07/templates/index.html
+++ b/ch07/templates/index.html
@@ -1,1 +1,29 @@
-<h2>Hello</h2>
+<!-- index.html (dj4ch07 project) -->
+{% extends "base.html" %}
+{% block title %}DJ中古機賣場{% endblock %}
+{% block content %}
+<div class='container' align=center>
+    {% for p in products %}
+    {% if forloop.first %}
+    <table>
+        <tr bgcolor='#cccccc'>
+            <td width=250>庫存手機</td>
+            <td width=150>廠牌/型號</td>
+            <td width=50>出廠年</td>
+            <td>價格</td></tr>
+    {% endif %}
+        <tr bgcolor='{% cycle "#ffccff" "ccffcc" %}'>
+            <td><a href='{% url "detail-url" p.id %}'>{{ p.nickname }}</a></td>
+            <td>{{ p.pmodel.maker.name }}/{{ p.pmodel }}</td>
+            <td>{{ p.year  }}</td>
+            <td align=right>{{ p.price }}</td>
+        </tr>
+    {% if forloop.last %}
+    </table>
+    {% endif %}
+    {% empty %}
+    <h3>目前沒有庫存的中古機可以賣，真抱歉</h3>
+    {% endfor %}
+    
+</div>
+{% endblock %}
